# py-cli-starter

./: README.md  pyproject.toml
src/namegoeshere/: __init__.py
