[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "namegoeshere"
version = "0.0.1"
dependencies = ["click", 'importlib-metadata; python_version<"3.10"']

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
name-goes-here = "namegoeshere:program"